# L2T

./: .env  .gitignore  LICENCE.md  README.md  l2t copy.ps1  l2t-alias.ps1  l2t.ps1  pyproject.toml  requirements.txt
OlivierLAVAUD_L2T _Readme_fichiers/: hotjar-6382967.js
app/: .env  README.md  __init__.py  cli.py  config.py  file_handlers.py  logger.py  main copy.py  main.py  optimizations.py  pyproject.toml  supported_languages.json  translator.py  utils.py
app/core/: __init__.py  commands.py  models.py  translator copy.py  translator.py
app/infrastructure/: __init__.py  file_handlers.py
app/infrastructure/gpu/: __init__.py  manager.py  monitor.py  optimizations.py  utils.py
app/infrastructure/gpu/check_config/: gpu_sync.py
app/interfaces/: __init__.py  cli.py  main copy.py  main.py
app/minimal/: README.md  cli-nllb.py  nllb copy 2.py  test-m2m.py  test-nllb.py
app/utils/: __init__.py  logger.py  progress.py
docs/: Le_Lievre_et_la_Tortue.txt  Le_Petit_Prince_ASE.eng-Latn.T2L.txt  texte.txt  texte_eng-Latn_translated.txt  texte_fra-Latn_translated.txt
gpu/: gpu_check.py  gpu_verif.py  gpu_version.py
img/: OlivierLAVAUD_L2T _Readme.md
ressources/: load_sample.py
scripts/: benchmark.py
tests/: README.md
tests/unit/: test_file_handler.py
